--- a/Desktop/instagram-clone/index.html
+++ b/Desktop/instagram-clone/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IG clone</title>
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <h1>This is my instagram clone</h1>
+    <!-- START OF NAV-BAR -->
+    <nav class="navbar">
+      <div class="navbar-wrapper">
+        <img src="img/logo.PNG" class="brand-img" alt="" />
+        <input type="text" class="search-box" placeholder="search" />
+        <div class="nav-items">
+          <img src="img/home.PNG" class="icon" alt="" />
+          <img src="img/messenger.PNG" class="icon" alt="" />
+          <img src="img/add.PNG" class="icon" alt="" />
+          <img src="img/like.PNG" class="icon" alt="" />
+          <div class="icon user-profile"></div>
+        </div>
+      </div>
+    </nav>
+    <!-- END OF NAV-BAR -->
   </body>
 </html>
